z-index fixed

--- a/style.css
+++ b/style.css
@@ -235,6 +235,7 @@ a {
 
 .box {
     margin-left: 30px;
+    position: relative;
     margin-right: 20px;
     margin-top: 40px;
     font-size: 27px;
@@ -245,7 +246,7 @@ a {
     opacity: 0;
     transition: all 0.5s linear;
     transition-delay: 1.6s;
-    z-index: -20;
+    z-index: -50;
 }
 
 .boxani {
